# Modelo-relacional-sellers

./: .gitignore  CLAUDE.md  ejecutar_modelo_completo.py  pyproject.toml  requirements.txt  validar_setup.py
.claude/: settings.json  settings.local.json
config/: config.yaml  eventos_externos.yaml
docs/: CREAR_JOBS_DATAFLOW_MCP.md  DATAFLOW_JOB_TABLAS.md  JOBS_UNO_POR_QUERY.md  LOGICA_DRIVERS.md  LOGICA_RAZONAMIENTO.md  LOGICA_RECUADRO_GRIS.md  MAPEO_QUERIES_ANALISIS.md  QUE_HACE_EL_MODELO.md
scripts/: actualizar_comparacion.py  gen_tab1_resumen.py  gen_tab2_cortes.py  gen_tab3_pdf.py  gen_tab4_cuali.py  gen_tab5_interactivo.py  generar_comparacion.py  generar_html_final.py  test_checkpoint0_cargar_datos.py  test_checkpoint1_drivers_nps.py  test_checkpoint2_enriquecer_datos.py  test_checkpoint3_tendencias_anomalias.py  test_checkpoint4_alertas_emergentes.py  test_checkpoint5_analisis_cualitativo.py
scripts/dataflow_ready/: NPS_AI_QUERY_CREDITS.sql  NPS_AI_QUERY_REMUNERADA.sql  NPS_AI_QUERY_SEGMENTACION.sql  NPS_AI_QUERY_TRANSACCIONES.sql  dataflow_jobs_manifest.json
src/nps_model/: __init__.py
src/nps_model/analysis/: __init__.py  alertas_emergentes.py  anomalias.py  comentarios.py  dimensiones.py  drivers_nps.py  efectos.py  quejas.py  razonamiento.py  tendencias.py  updates.py  variaciones.py
src/nps_model/io/: __init__.py  bigquery_client.py  loaders.py
src/nps_model/metrics/: __init__.py  drivers.py  nps.py  shares.py
src/nps_model/report/: __init__.py  generator.py
src/nps_model/sql/: creditos_futuro.sql  enrichment_aprobacion_op.sql  (+24 more)
(+7 files in other folders)
